@@ -640,6 +640,7 @@ GSM_Error DUMMY_GetNetworkInfo(GSM_StateMachine *s, GSM_NetworkInfo *netinfo)
 	netinfo->State = GSM_HomeNetwork;
 	strcpy(netinfo->LAC, "B00B");
 	EncodeUnicode(netinfo->NetworkName, "GammuT3l", 8);
+	netinfo->GPRS = 0;
 
 	return ERR_NONE;
 }
